--- a/HTML_LEVEL_TWO/quiz_tables.html
+++ b/HTML_LEVEL_TWO/quiz_tables.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Quiz Tables</title>
+        <title>Table Quiz</title>
     </head>
     <body>
         <table border="1">
