--- a/HTML_LEVEL_ONE/basics.html
+++ b/HTML_LEVEL_ONE/basics.html
@@ -24,7 +24,7 @@
 
         <h1>Lists</h1>
         <ol><!--Ordered List-->
-            <li>First Item</li>
+            <li>First Item</li><!--List Item-->
             <li>Second Item</li>
             <li>Third Item</li>
         </ol>
