--- a/HTML_LEVEL_ONE/newpage.html
+++ b/HTML_LEVEL_ONE/newpage.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1>THIS IS THE NEW PAGE</h1>
+        <img src="mariopng.png" alt="Uh Oh! Image not found"> <!--self closing tag // alt means alternate: alternate-->
+        
     </body>
 </html>
