--- a/HTML_LEVEL_TWO/HTML_Level_Two_Assessment.html
+++ b/HTML_LEVEL_TWO/HTML_Level_Two_Assessment.html
@@ -47,7 +47,7 @@
             </select>
         </p>
 
-        <input type="submit" name="Sing Up">
+        <input type="submit" name="Sign Up" id="submit">
     </form>
 
 </body>
